# AaC

./: .dir-locals.el  .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .project  CODE_OF_CONDUCT.md  LICENSE  README.md  aac-schema.json  aac.el  aac.vsix  data-schema.json  dev-requirements.txt  disable_.dir-locals.not_an_el  disable_aac.not_an_el  echo.yaml  point-of-sale.yaml  pyproject.toml  pyproject.toml.old  requirements.txt  settings.gradle  setup.py  test  test-bad.yaml  test-good.yaml  test-schema.json  todos.org  tox.ini
app/: .project  (+1 more)
python/: .dir-locals.el  .gitignore  .pylintrc  MANIFEST.in  README.md  list_plugins.sh  pyproject.toml  setup.py  test.aac  test.py  tox.ini
python/features/: alarm_clock.feature  calc.feature  check.feature  constraint_assignment_arguments.feature  counter.feature  docs_checks.feature  echo.feature  flow.feature
python/features/alarm_clock/: alarm_clock.yaml  external.yaml  structures.yaml  usecase.yaml
python/features/calc/: Readme.md
python/features/counter/: Counter.yaml
python/features/echo/: EchoService.yaml  Message.yaml
python/features/flow/: DataA.yaml  DataB.yaml  DataC.yaml  DataD.yaml  ServiceOne.yaml  ServiceThree.yaml  ServiceTwo.yaml  Subsystem.yaml  System.yaml  flow.yaml
python/features/plugin_examples/: root_keys.aac  root_keys_duplicate.aac  schema_plugin.aac  schema_plugin_bad.aac
python/features/plugins/: check.feature  constraint_assignment_arguments.feature  exclusive_fields.feature  gen_plugin.feature  if_true_then_empty.feature  no_ext_for_final.feature  primitive.feature  print_defs.feature  root_schema_must_have_name.feature  trade_study.feature  trade_study_requirements.feature  unique_root_keys.feature  version.feature
python/features/primitives/: bad_bool.yaml  bad_dataref.yaml  bad_date.yaml  bad_dir.yaml  bad_file.yaml  bad_int.yaml  bad_number.yaml  bad_string.yaml  bad_typeref.yaml  primitives.yaml
python/features/root_schema/: root_schema.aac  root_schema_bad.aac
python/features/shapes/: bad_shapes.aac  bad_shapes_extension.aac  shapes.aac
python/features/steps/: gen_plugin_steps.py  general_purpose_steps.py  print_defs.py
python/model/aac/: AaC_CLI.yaml
python/model/alarm_clock/: AlarmClock.yaml  alarm_clock.yaml  structures.yaml  usecase.yaml
python/model/counter/: Counter.yaml  EventCount.yaml  Request.yaml  Response.yaml
python/model/echo/: EchoService.yaml  Message.yaml
python/model/flow/: DataA.yaml  DataB.yaml  DataC.yaml  DataD.yaml  DataMessage.yaml  External.yaml  ServiceOne.yaml  ServiceThree.yaml  ServiceTwo.yaml  Subsystem.yaml  System.yaml  flow.yaml
python/model/material/: amazon_parts.yaml  apartment_provided.yaml  bed_room.yaml  furniture_store.yaml  kitchen.yaml  living_room.yaml  my_apartment.yaml  part_list_report.yaml
python/model/plugin/: definitions.yaml  plugin.yaml
python/model/protobuf_flow/: Data.aac  Data.yaml  External.yaml  GoogleAuthApi.aac  GoogleAuthApi.yaml  Services.aac  Services.yaml  Subsystem.aac  System.aac  System.yaml  flow.aac  flow.yaml
python/model/ssc/: pad_safety_console.yaml
python/model/sysml_sample/: bdd_firing_range.aac
python/model/test_file/: test_file.yaml
python/output/object/: system_system.puml
python/secure_install/: README.md
python/secure_install/install_scripts/: install_aac_air_gap.bash  install_aac_air_gap.bat  install_aac_verified_index.bash  install_aac_verified_index.bat  secure_install_aac.bash
python/secure_install/pipeline_scripts/: create_install_archive.bash  create_install_archive.bat
python/secure_install/scripts/: create_wheelhouse.sh  install_wheelhouse.sh
python/src/: aac.aac
python/src/aac/: AacCommand.py  __init__.py  __main__.py  aac.aac  cli.py  definition_helpers.py  package_resources.py  parser.py  template_engine.py  util.py  validator.py
python/src_orig/aac/: __main__.py  package_resources.py
python/tests/: __init__.py  base_test_case.py  test_definition_helpers.py  test_package_resources.py  test_parser.py  test_spec_core.py  test_template_engine.py  test_util.py  test_validator.py  test_version.py
python/tests/cli/: test_execute.py  test_validate_command.py
python/tests/files/: test_find.py
python/tests/helpers/: assertion.py  context.py  contribution_points.py  io.py  parsed_definitions.py  plugins.py  prebuilt_definition_constants.py  test_io.py  test_parsed_definitions.py
python/tests/io_tests/: test_parser.py  test_parser_cache.py  test_paths.py  test_writer.py
python/tests/lang/: LspTestClient.py  base_lsp_test_case.py  configure_test.py  lsp_test_client.py  test_ActiveContext.py  test_active_context.py  test_active_context_lifecycle_manager.py  test_context_manager.py  test_definition.py  test_definition_helpers.py  test_definition_lookup.py  test_hierarchy.py  test_language_context.py  test_references.py  test_server.py
python/tests/plugins/: test_aac_reporting_impl.py  test_aac_rest_api_impl.py  test_contribution_points.py  test_gen_design_doc_impl.py  test_gen_gherkin_behaviors.py  test_gen_json.py  test_gen_plant_uml.py  test_gen_plugin.py  test_gen_protobuf.py  test_help_dump_impl.py  test_material_model_impl.py  test_plugin.py  test_plugin_contribution.py  test_plugin_management_impl.py  test_primitive_type_checking_impl.py  test_reporting_impl.py  test_rest_api.py  test_specifications_impl.py  test_sysml_impl.py
python/tests/templates/: test_engine.py
python/tests_orig/: active_context_test_case.py  test_package_resources.py  test_spec_core.py  test_version.py
(+1866 files in other folders)
