[tool.poetry]
name = "aac"
version = "0.1.6"
description = "A distinctly different take on Model-Based System Engineering (MBSE) that allows a system modeller to define a system in simple yaml. "
authors = ["Jondavid Black <jondavid-black@users.noreply.github.com>"]
maintainers = ["Jondavid Black <jondavid-black@users.noreply.github.com>"]
readme = "../README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""
keywords = ["MBSE", "Model", "Based", "Systems", "Engineering","Architecture", "code", "Architecture as Code"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Architecture as Code",
    "Topic :: Software Development :: Model Based Systems Engineering",
]
packages = [
    { include = "aac", from = "src" },
]
include = ["*.aac", "*.jinja2", "*.yaml"]

[tool.poetry.group.development.dependencies]
wheel = "^0.37.0"
pip-tools = "^6.9.0"
tomli = "^1.0"
black = "^22.3.0"
platformdirs = "^2.4"
coverage = "^6.0"
mccabe = "^0.6.1"
mypy-extensions = "^0.4.3"
pycodestyle = "^2.8.0"
pyflakes = "^2.4"
build = "^0.7.0"
twine = "^3.4.2"
Sphinx = "^4.2.0"
sphinxcontrib-applehelp = "^1.0.2"
sphinxcontrib-devhelp = "^1.0.2"
sphinxcontrib-htmlhelp = "^2.0.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^1.0.3"
sphinxcontrib-serializinghtml = "^1.1.5"
furo = "^2021.10.9"
pipdeptree = "^2.2.0"
Pygments = "^2.5.1"
mypy = "^0.961"
types-PyYAML = "^6.0.9"

[tool.poetry.group.test.dependencies]
tox = "^3.24"
nose2 = "^0.10.0"
coverage = "^6.0"
flake8 = "^4.0"
flake8-docstrings = "^1.6.0"
flake8-fixme = "^1.1.1"
flake8-eradicate = "^1.2.0"
flake8-assertive = "^1.3.0"
eradicate = "^2.0"
httpx = "^0.23.0"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
attrs = "^22.1"
pyrsistent = "^0.19"
PyYAML = "^6.0"
six = "^1.16"
click = "^8.1"
pathspec = "^0.10"
regex = "^2022.10.31"
typing-extensions = "^4.4"
pluggy = "^1.0"
Jinja2 = "^3.1"
MarkupSafe = "^2.1"
pygls = "^0.13.1"
fastapi = "^0.86"
starlette = "^0.20.4"
anyio = "^3.6.0"
sniffio = "^1.3"
uvicorn = "^0.19.0"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aac = 'aac.cli.execute:cli'
